--- a/people.html
+++ b/people.html
@@ -59,14 +59,12 @@
               <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
-              <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non ligula sit amet libero semper convallis vitae ut urna. 
-                  Quisque efficitur libero est, in aliquet nunc tempor cursus.</p>
+                <h2>Yunqian</h2>
+                <p>My study focuses on using biomaterials to modulate immune responses for enhanced tissue regeneration. I am particularly interested in how engineered topographical modification of microgel scaffolds and metabolites can direct macrophage behavior to support bone regeneration. </p>
                 <p>Sed aliquet eleifend lorem, sed fermentum nulla maximus in. 
                   Suspendisse id nisl et lorem ultrices iaculis. Cras rhoncus varius risus, sit amet gravida justo.</p>
 
               </div>
-            </div>
         </section>
     </main>
 
