Update - links - people.html

--- a/people.html
+++ b/people.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="people.html">People</a></li>
-                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Research</a></li>
+                <li><a href="people.html">Members</a></li>
+                <li><a href="news.html">Publication</a></li>
             </ul>
         </nav>
     </header>
@@ -75,7 +75,7 @@
                 <p>My work centers around characterizing the material aspect of the lab. Primarily I work on imaging the topological structure 
                     of our microgels through SEM imaging as well as characterizing our Gelatin Methacrylate formulation through rheological testing. 
                     Furthermore, in collaboration with Dr. Zhang, I work on testing 3D printed microfluidic devices in order to achieve different 
-                    microgel structures like a core shell microgel structure.  </p>
+                    microgel structures like a core shell microgel structure. </p>
               </div>
         </section>
 
