--- a/news.html
+++ b/news.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="people.html">People</a></li>
-                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">Research</a></li>
+                <li><a href="people.html">Members</a></li>
+                <li><a href="news.html">Publication</a></li>
             </ul>
         </nav>
     </header>
