--- a/people.html
+++ b/people.html
@@ -36,7 +36,9 @@
         </section>
 
         <section class="image-text-section">
-            <h2>Dr. Su</h2>
+            <div>
+                <h2>Dr. Su</h2>
+            </div>
             <div class="image-container">
               <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
             </div>
@@ -56,11 +58,13 @@
         </section>
 
         <section class="image-text-section">
+             <div>
+                <h2>Yunqian Zhang</h2>
+            </div>
             <div class="image-container">
               <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
-                <h2>Yunqian Zhang</h2>
                 <p>My study focuses on using biomaterials to modulate immune responses for enhanced tissue regeneration. 
                     I am particularly interested in how engineered topographical modification of microgel scaffolds and metabolites can direct 
                     macrophage behavior to support bone regeneration. </p>
@@ -68,11 +72,13 @@
         </section>
 
         <section class="image-text-section">
+            <div>
+                <h2>Jay Patel</h2>
+            </div>
             <div class="image-container">
               <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
-                <h2>Jay Patel</h2>
                 <p>My work centers around characterizing the material aspect of the lab. Primarily I work on imaging the topological structure 
                     of our microgels through SEM imaging as well as characterizing our Gelatin Methacrylate formulation through rheological testing. 
                     Furthermore, in collaboration with Dr. Zhang, I work on testing 3D printed microfluidic devices in order to achieve different 
@@ -87,11 +93,13 @@
         </section>
 
         <section class="image-text-section">
+            <div>
+            <h2>Bodie Woodrum</h2>    
+            </div>
             <div class="image-container">
               <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
-              <h2>Bodie Woodrum</h2>
               <p>The work I do in the lab is best associated with cells, specifically MSCs and their signaling, responses to different primed 
                   macrophage conditioned media (M1, M2), and general cellular processes. Through a combination of wet lab techniques and 
                   physiological applications, we condition our MSCs to produce the most effective therapeutic effect in relation to osteogenesis 
