--- a/people.html
+++ b/people.html
@@ -62,7 +62,7 @@
                 <h2>Yunqian Zhang</h2>
             </div>
             <div class="image-container">
-              <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
+              <img src="images/Yunqian_Profile photo.PNG" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
                 <p>My study focuses on using biomaterials to modulate immune responses for enhanced tissue regeneration. 
@@ -76,7 +76,7 @@
                 <h2>Jay Patel</h2>
             </div>
             <div class="image-container">
-              <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
+              <img src="images/Jay_Patel Profile picture.jpeg" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
                 <p>My work centers around characterizing the material aspect of the lab. Primarily I work on imaging the topological structure 
@@ -97,7 +97,7 @@
             <h2>Bodie Woodrum</h2>    
             </div>
             <div class="image-container">
-              <img src="https://picsum.photos/id/33/300/200" alt="Description of image" width="200px" height="auto"/>
+              <img src="images/BodieWoodrum_ProfilePic.jpg" alt="Description of image" width="200px" height="auto"/>
             </div>
             <div class="text-container">
               <p>The work I do in the lab is best associated with cells, specifically MSCs and their signaling, responses to different primed 
