Update -names test again- people.html

--- a/people.html
+++ b/people.html
@@ -35,10 +35,13 @@
           </div>
         </section>
 
-        <section class="image-text-section">
+        <section>
             <div>
                 <h2>Dr. Su</h2>
-            </div>
+            </div>  
+        </section>
+
+        <section class="image-text-section">
             <div class="image-container">
               <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
             </div>
@@ -57,10 +60,13 @@
           </div>
         </section>
 
-        <section class="image-text-section">
-             <div>
+        <section>
+            <div>
                 <h2>Yunqian Zhang</h2>
             </div>
+        </section>
+
+        <section class="image-text-section">
             <div class="image-container">
               <img src="images/Yunqian_Profile photo.PNG" alt="Description of image" width="200px" height="auto"/>
             </div>
