--- a/people.html
+++ b/people.html
@@ -62,6 +62,7 @@
 
         <section>
             <div>
+                <h2>Yunqian Zhang</h2>
             </div>
         </section>
 
@@ -76,10 +77,14 @@
               </div>
         </section>
 
-        <section class="image-text-section">
+
+        <section>
             <div>
                 <h2>Jay Patel</h2>
             </div>
+        </section>
+        
+        <section class="image-text-section">
             <div class="image-container">
               <img src="images/Jay_Patel Profile picture.jpeg" alt="Description of image" width="200px" height="auto"/>
             </div>
@@ -97,10 +102,13 @@
           </div>
         </section>
 
-        <section class="image-text-section">
+        <section>
             <div>
-            <h2>Bodie Woodrum</h2>    
+                <h2>Bodie Woodrum</h2>
             </div>
+        </section>
+        
+        <section class="image-text-section">
             <div class="image-container">
               <img src="images/BodieWoodrum_ProfilePic.jpg" alt="Description of image" width="200px" height="auto"/>
             </div>
