Update -Dr.Su description test- people.html

--- a/people.html
+++ b/people.html
@@ -43,12 +43,12 @@
 
         <section class="image-text-section">
             <div class="image-container">
-              <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
+              <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="300px" height="auto"/>
             </div>
             <div class="text-container">
-              
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non ligula sit amet libero semper convallis vitae ut urna. 
-                Quisque efficitur libero est, in aliquet nunc tempor cursus.</p>
+              <h3>Position</h3> <br  />
+              <p>2024-now         Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
+                 2019-2024         Postdoctoral researcher, Orthopaedic Surgery, Stanford University</p>
               <p>Sed aliquet eleifend lorem, sed fermentum nulla maximus in. 
                 Suspendisse id nisl et lorem ultrices iaculis. Cras rhoncus varius risus, sit amet gravida justo.</p>
             </div>
