Update -Dr.Su description- people.html

--- a/people.html
+++ b/people.html
@@ -46,11 +46,22 @@
               <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="300px" height="auto"/>
             </div>
             <div class="text-container">
-              <h3>Position</h3> <br  />
-              <p>2024-now         Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
-                 2019-2024         Postdoctoral researcher, Orthopaedic Surgery, Stanford University</p>
-              <p>Sed aliquet eleifend lorem, sed fermentum nulla maximus in. 
-                Suspendisse id nisl et lorem ultrices iaculis. Cras rhoncus varius risus, sit amet gravida justo.</p>
+              <h4>Position</h4> <br  />
+              <pre>2024-now       Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
+                 2019-2024       Postdoctoral researcher, Orthopaedic Surgery, Stanford University</pre> <br  />
+              <h4>Education</h4> <br  />
+              <p>Ph.D. degree in Biomedical Engineering, Peking University /Georgia Institute of Technology Joint PhD program, 
+                  2018​ B.S. degree in Biology, Shandong University, 2012</p> <br />
+                <h4>Honors and Awards</h4> <br  />
+              <pre>2025      Lafferty Faculty Fellowship in Biomedical Engineering, University of Kentucky​ 
+                   2024      Outstanding Postdoc Award, Tissue Engineering International & Regenerative Medicine Society-America ​
+                   2023      Postdoctoral Recognition Award finalist, Society for Biomaterials​
+                   2022      Stanford Bio-X Travel Award​
+                   2021      Stanford Bio-X Star Mentor Award​
+                   2019      Stanford Maternal and Child Health Research Institute (MCHRI) Postdoctoral Fellowship</pre>
+
+
+                
             </div>
         </section>
 
