Update - Description format test- people.html

--- a/people.html
+++ b/people.html
@@ -47,18 +47,18 @@
             </div>
             <div class="text-container">
               <h4>Position</h4> <br  />
-              <pre>2024-now       Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
-                 2019-2024       Postdoctoral researcher, Orthopaedic Surgery, Stanford University</pre> <br  />
+              <p>2024-now    -   Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
+                 2019-2024    -   Postdoctoral researcher, Orthopaedic Surgery, Stanford University</p> <br  />
               <h4>Education</h4> <br  />
               <p>Ph.D. degree in Biomedical Engineering, Peking University /Georgia Institute of Technology Joint PhD program, 
                   2018​ B.S. degree in Biology, Shandong University, 2012</p> <br />
                 <h4>Honors and Awards</h4> <br  />
-              <pre>2025      Lafferty Faculty Fellowship in Biomedical Engineering, University of Kentucky​ 
-                   2024      Outstanding Postdoc Award, Tissue Engineering International & Regenerative Medicine Society-America ​
-                   2023      Postdoctoral Recognition Award finalist, Society for Biomaterials​
-                   2022      Stanford Bio-X Travel Award​
-                   2021      Stanford Bio-X Star Mentor Award​
-                   2019      Stanford Maternal and Child Health Research Institute (MCHRI) Postdoctoral Fellowship</pre>
+              <p>2025 &nbsp; Lafferty Faculty Fellowship in Biomedical Engineering, University of Kentucky​ 
+                   2024 &nbsp; Outstanding Postdoc Award, Tissue Engineering International & Regenerative Medicine Society-America ​
+                   2023 &nbsp; Postdoctoral Recognition Award finalist, Society for Biomaterials​
+                   2022 &nbsp; Stanford Bio-X Travel Award​
+                   2021 &nbsp; Stanford Bio-X Star Mentor Award​
+                   2019 &nbsp; Stanford Maternal and Child Health Research Institute (MCHRI) Postdoctoral Fellowship</p>
 
 
                 
