--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@
               <p>2024-now &nbsp;-&nbsp; Assistant Professor, Department of Biomedical Engineering, University of Kentucky​ <br /> 
                  2019-2024 &nbsp;-&nbsp; Postdoctoral researcher, Orthopaedic Surgery, Stanford University</p> <br  />
               <h4>Education</h4> <br  />
-              <p>Ph.D. degree in Biomedical Engineering, Peking University /Georgia Institute of Technology Joint PhD program, 
+              <p>Ph.D. degree in Biomedical Engineering, Peking University /Georgia Institute of Technology Joint PhD program, <br />
                   2018​ B.S. degree in Biology, Shandong University, 2012</p> <br />
                 <h4>Honors and Awards</h4> <br  />
               <p>2025 &nbsp;-&nbsp; Lafferty Faculty Fellowship in Biomedical Engineering, University of Kentucky​ <br /> 
