--- a/people.html
+++ b/people.html
@@ -43,7 +43,7 @@
 
         <section class="image-text-section">
             <div class="image-container">
-              <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="300px" height="auto"/>
+              <img src="images/Ni Su Profile photo (1).jpg" alt="Dr. Su, Laboratory Director" width="300px" height="auto"/>
             </div>
             <div class="text-container">
               <h4>Position</h4> <br  />
