--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">Research</a></li>
-                <li><a href="people.html">Members</a></li>
+                <li><a href="members.html">Members</a></li>
                 <li><a href="news.html">Publication</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
     <main>
         <section class="title-of-page">
             <div>
-                <h3>People</h3>
+                <h3>Members</h3>
             </div>
 
         </section>
