--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">Research</a></li>
-                <li><a href="people.html">Members</a></li>
+                <li><a href="members.html">Members</a></li>
                 <li><a href="news.html">Publication</a></li>
             </ul>
         </nav>
