--- a/members.html
+++ b/members.html
@@ -84,7 +84,11 @@
             <div class="text-container">
                 <p>My study focuses on using biomaterials to modulate immune responses for enhanced tissue regeneration. 
                     I am particularly interested in how engineered topographical modification of microgel scaffolds and metabolites can direct 
-                    macrophage behavior to support bone regeneration. </p>
+                    macrophage behavior to support bone regeneration. </p> <br  />
+             <h4>Education</h4> <br  />
+                <p>January 2025-Present: Biomedical Engineering, PhD Program, University of Kentucky, KY, USA.<br  />
+                    August 2021-December 2024: Biological Sciences, MS in Science, Virginia Tech, VA, USA.<br  />                                   
+                    September 2017- June 2021: Central South University, P.R. China. B.S. in Biological Science. <p/>
               </div>
         </section>
 
