--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 
     <main>
         <section class="leftindex">
-            <h2>Ni Su, Ph.D</h2>
-            <p>Est sapiente excepturi et ipsum eligendi cum nisi alias est 
-            consequatur quia et molestiae numquam. Ea doloremque laboriosam in 
-            quibusdam rerum et i</p>
+            <h2>Biomaterials and Regenerative Medicine Lab</h2>
+            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
+                therapies for various diseases. Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
+                function. Our research focuses on engineering biomaterials that can modulate immune responses to promote healing and restore 
+                tissue function. We employ cutting-edge biomaterial platforms to construct complex, humanized in vitro disease models for 
+                mechanistic discovery and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
+                scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology, 
+                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction and leverage this 
+                knowledge to develop next-generation immunotherapies.​</p>
         </section>
         <section class="leftindex">
             <div class="image-container">
