--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="leftindex">
+        <section class="homesectiontwoandthree">
             <h2>Biomaterials and Regenerative Medicine Lab</h2>
             <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
                 therapies for various diseases. Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
@@ -32,13 +32,13 @@
                 scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology, 
                 materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction and leverage this 
                 knowledge to develop next-generation immunotherapies.​</p>
-        </section>
-        <section class="leftindex">
+<!--         <section class="leftindex"> -->
             <div class="image-container">
               <img src="https://picsum.photos/id/19/200/300" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
             </div>
-            
+<!--         </section> -->
         </section>
+        
     </main>
 
     <footer>
