--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
         
            <h2>Biomaterials and Regenerative Medicine Lab</h2>
         
-        <section class="homesectiontwoandthree">
-            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
-                therapies for various diseases. Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
-                function. Our research focuses on engineering biomaterials that can modulate immune responses to promote healing and restore 
-                tissue function. We employ cutting-edge biomaterial platforms to construct complex, humanized in vitro disease models for 
-                mechanistic discovery and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
-                scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology, 
-                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction and leverage this 
+        <section class="image-text-section">
+            <div class="text-container">
+            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system <br /> and biomaterials to advance 
+                therapies for various diseases. Nearly every known pathology—from tissue injury <br /> and cancer to aging—is influenced by immune 
+                function. Our research focuses on engineering biomaterials <br /> that can modulate immune responses to promote healing and restore 
+                tissue function. We employ cutting-edge <br /> biomaterial platforms to construct complex, humanized in vitro disease models for 
+                mechanistic discovery <br /> and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
+                scaffolds <br /> to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,<br />  
+                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction <br /> and leverage this 
                 knowledge to develop next-generation immunotherapies.​</p>
+            </div>
 <!--         <section class="leftindex"> -->
             <div class="image-container">
               <img src="https://picsum.photos/id/19/200/300" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
