--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
                     <li><a href="about.html">Research</a></li>
                     <li><a href="members.html">Members</a></li>
                     <li><a href="news.html">Publication</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
     </header>
