--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
     </main>
 
     <footer>
-        <p>Contact</p>
+        <ul>
+             <li><a href="contact.html">Contact</a></li>
+        </ul>
         </footer>
 
     <script src="script.js"></script>
