--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <p>contact</p>    
+        <p>Contact</p>    
     </footer>
 
     <script src="script.js"></script>
