--- a/news.html
+++ b/news.html
@@ -24,7 +24,10 @@
 
     <main>
 
-        <h2>Publications</h2>
+        <section>
+            <h2>Publications</h2>
+        </section>
+        
         
         <section>
             <p> &nbsp;&nbsp;Su, N.; Saqib, H.; Villicana, C.; Kim, S.; Ambrosi, T. H.; Freeman, P.; Kim, T.; Tong, X.; Ayushman, M.; Chan,
