--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     <main>
 
         <section>
-            <h2>Publications</h2>
+            <h2>Publications</h2> <br/> <br/>
         </section>
         
         
