--- a/about.html
+++ b/about.html
@@ -23,14 +23,37 @@
     </header>
 
     <main>
-        <h2>About</h2>
+        <h3>Research</h3>
 
-        <section>
-            
-            <img src="images/dr-su-profile-photo.jpg" alt="Dr. Su, Laboratory Director" width="120px" height="auto"/>
-            <p>Lorem ipsum dolor sit amet. Eos fuga dignissimos ut temporibus tempore ut quos quidem. Id nesciunt repudiandae et totam unde aut harum pariatur id voluptates voluptatem ea exercitationem rerum.</p>
+        <section class="image-text-section">
+            <div class="image-container">
+            <img src="images/Over all research direction.jpg" alt="Dr. Su, Laboratory Director" width="2500px" height="auto"/>
+            </div>
+             <div class="text-container">
+            <p>Our group is dedicated to uncovering immune
+            mechanisms in various disease conditions and
+            innovating biomaterial-based immunotherapy for
+            tissue injury, cancer, and aging-induced tissue
+            degeneration. <br/>
+                Toward this goal, we focus on two
+            main research directions: <br/>
+                (1) We design biomaterials
+            with tunable biophysical and biochemical cues to
+            directly modulate immune activity and promote
+            tissue regeneration. <br/>
+                (2) We develop humanized in
+            vitro disease models for mechanistic discovery of
+            immune crosstalk and high-throughput drug
+            screening. By integrating principles of immunology,
+            materials science, and stem cell biology, we aim to
+            uncover the underlying mechanisms of immune
+            dysfunction and leverage this knowledge to
+            develop next-generation immunotherapies.​</p>
+             </div>
         </section>
 
+        <h2>Theme 1: Immunomodulatory hydrogel scaffold for bone regeneration​</h2>
+        
         <section class="image-text-section">
             <div class="image-container">
               <img src="https://picsum.photos/seed/picsum/200/300" alt="Description of image" width="120px" height="auto"/>
