--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
         <section class="image-text-section">
             <div class="image-container">
-            <img src="images/Over all research direction.jpg" alt="Dr. Su, Laboratory Director" width="2500px" height="auto"/>
+            <img src="images/Over all research direction.jpg" alt="ResearchDirection" width="200px" height="auto"/>
             </div>
              <div class="text-container">
             <p>Our group is dedicated to uncovering immune
@@ -55,6 +55,24 @@
         <h2>Theme 1: Immunomodulatory hydrogel scaffold for bone regeneration​</h2>
         
         <section class="image-text-section">
+            <div class="image-container">
+              <img src="images/Theme 1.jpg" alt="Theme1image1" width="200px" height="auto"/>
+            <p>
+                Su et al., Advanced Materials, 2023
+            </p>
+            </div>
+            <div class="text-container">
+              <p>Cell membrane (CellMem) coating offers distinct advantages in biomimicry by leveraging the full repertoire of natural 
+                  membrane-bound ligands. We pioneered the integration of stem cell-derived membranes onto macroporous hydrogel scaffolds to 
+                  achieve localized immunomodulation. These CellMem-coated scaffolds modulated both macrophage and T cell responses, resulting 
+                  in complete regeneration of critical-sized craniofacial bone defects. Our ongoing work further explores cell membranes derived 
+                  from various cell types and their synergistic effects with cell-secreted vesicles to develop therapies for tissue injury in aging 
+                  and cancer treatment.</p>
+            </div>
+          </section>
+
+        
+         <section class="image-text-section">
             <div class="image-container">
               <img src="https://picsum.photos/seed/picsum/200/300" alt="Description of image" width="120px" height="auto"/>
             </div>
