--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 <!--         <section class="leftindex"> -->
             <div class="image-container">
-              <img src="https://picsum.photos/id/19/200/300" alt="Dr. Su, Laboratory Director" width="200px" height="auto"/>
+              <img src="images/lab_recruitment.png" alt="Recruitment" width="200px" height="auto"/>
             </div>
 <!--         </section> -->
         </section>
