--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 function. Our research focuses on engineering biomaterials <br /> that can modulate immune responses to promote healing and restore 
                 tissue function. We employ cutting-edge <br /> biomaterial platforms to construct complex, humanized in vitro disease models for 
                 mechanistic discovery <br /> and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
-                scaffolds <br /> to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,<br />  
-                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction <br /> and leverage this 
+                scaffolds <br /> to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,  
+                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune<br />  dysfunction and leverage this 
                 knowledge to develop next-generation immunotherapies.​</p>
             </div>
 <!--         <section class="leftindex"> -->
