--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Dr. Su's Lab</h1>
+        <h1>Biomaterials and Regenerative Medicine Lab</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -28,13 +28,13 @@
         
         <section class="image-text-section">
             <div class="text-container">
-            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system <br /> and biomaterials to advance 
-                therapies for various diseases. Nearly every known pathology—from tissue injury <br /> and cancer to aging—is influenced by immune 
-                function. Our research focuses on engineering biomaterials <br /> that can modulate immune responses to promote healing and restore 
-                tissue function. We employ cutting-edge <br /> biomaterial platforms to construct complex, humanized in vitro disease models for 
-                mechanistic discovery <br /> and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
-                scaffolds <br /> to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,  
-                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune<br />  dysfunction and leverage this 
+            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
+                therapies for various diseases. Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
+                function. Our research focuses on engineering biomaterials that can modulate immune responses to promote healing and restore 
+                tissue function. We employ cutting-edge biomaterial platforms to construct complex, humanized in vitro disease models for 
+                mechanistic discovery and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
+                scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,  
+                materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction and leverage this 
                 knowledge to develop next-generation immunotherapies.​</p>
             </div>
 <!--         <section class="leftindex"> -->
@@ -42,6 +42,32 @@
               <img src="images/lab_recruitment.png" alt="Recruitment" width="600px" height="auto"/>
             </div>
 <!--         </section> -->
+        </section>
+
+        <h2>Recent News</h2>
+        <section>
+             <div class="image-container">
+            <p> July 1, 2025 – New Publication​
+            Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
+<br/>
+                March 26, 2025 – Summer Fellowship Awarded​
+            Congratulations to Yunqian (Lyndsey) Zhang for receiving the UK BNRC Summer Research Fellowship to support her collaborative work with Dr. Tong. Her project focuses on a magneto-responsive magnetic nanoparticle-loaded microrod scaffold designed to promote bone regeneration through immunomodulation.​
+<br/>
+                February 28, 2025 – New Funding Awarded: UK CCTS Pilot Program​
+            We are excited to share that the Su Lab has received funding from the UK CCTS Pilot Program to support our collaboration with Dr. Simkin from the Microbiology, Immunology, and Molecular Genetics Department. This project, titled Microgel-Based Macrophage Metabolic Reprogramming for Inflammation Control and Tissue Regeneration, aims to develop immunomodulatory platforms that harness macrophage metabolism to promote tissue repair.​
+<br/>
+                May 12, 2025 – Welcome new lab member​
+            A warm welcome to Bodie, who has joined us through the Summer Undergraduate Research Program! He will be working on harnessing the macrophage secretome to promote tissue regeneration.​
+<br/>
+                March 28, 2025 – Conference Presentation​
+            Congratulations to Yunqian (Lyndsey) Zhang, who presented her poster at the SFB Biomaterials Day hosted by Vanderbilt University in Nashville, Tennessee.​
+<br/>
+                March 4, 2025 – Faculty Fellowship Awarded​
+            Congratulations to Dr. Su for being awarded the James F. Lafferty Faculty Fellowship in Biomedical Engineering! This prestigious recognition supports Dr. Su’s innovative research in immunomodulatory biomaterials and her commitment to advancing biomedical engineering education and discovery.​
+<br/>
+                January 13, 2025 – Welcome new lab member​
+            Welcome, Yunqian (Lyndsey) Zhang, to join the Su Lab as a new graduate student! She earned her M.S. in Biology from Virginia Tech and will be working on macrophage metabolic modulation for tissue regeneration.​</p>
+       </div>
         </section>
         
     </main>
