--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <h2>Recent News</h2>
         <section>
-             <div class="image-container">
+             <div class="homesectiontwoandthree">
             <p> July 1, 2025 – New Publication​
             Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
 <br/>
