--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Research</a></li>
+                <li><a href="research.html">Research</a></li>
                 <li><a href="members.html">Members</a></li>
                 <li><a href="news.html">Publication</a></li>
                 <li><a href="contact.html">Contact</a></li>
