--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
         <section>
              <div class="homesectiontwoandthree">
             <p> July 1, 2025 – New Publication​ <br/>
-            Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
-<br/>
+            &ensp; Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
+<br/> <br/>
                 March 26, 2025 – Summer Fellowship Awarded​ <br/>
            &ensp; Congratulations to Yunqian (Lyndsey) Zhang for receiving the UK BNRC Summer Research Fellowship to support her collaborative work with Dr. Tong. Her project focuses on a magneto-responsive magnetic nanoparticle-loaded microrod scaffold designed to promote bone regeneration through immunomodulation.​
-<br/>
+<br/> <br/>
                 February 28, 2025 – New Funding Awarded: UK CCTS Pilot Program​ <br/>
            &ensp; We are excited to share that the Su Lab has received funding from the UK CCTS Pilot Program to support our collaboration with Dr. Simkin from the Microbiology, Immunology, and Molecular Genetics Department. This project, titled Microgel-Based Macrophage Metabolic Reprogramming for Inflammation Control and Tissue Regeneration, aims to develop immunomodulatory platforms that harness macrophage metabolism to promote tissue repair.​
-<br/>
+<br/> <br/>
                 May 12, 2025 – Welcome new lab member​ <br/>
            &ensp; A warm welcome to Bodie, who has joined us through the Summer Undergraduate Research Program! He will be working on harnessing the macrophage secretome to promote tissue regeneration.​
-<br/>
+<br/> <br/>
                 March 28, 2025 – Conference Presentation​ <br/>
             &ensp;Congratulations to Yunqian (Lyndsey) Zhang, who presented her poster at the SFB Biomaterials Day hosted by Vanderbilt University in Nashville, Tennessee.​
-<br/>
+<br/> <br/>
                 March 4, 2025 – Faculty Fellowship Awarded​ <br/>
             &ensp;Congratulations to Dr. Su for being awarded the James F. Lafferty Faculty Fellowship in Biomedical Engineering! This prestigious recognition supports Dr. Su’s innovative research in immunomodulatory biomaterials and her commitment to advancing biomedical engineering education and discovery.​
-<br/>
+<br/> <br/>
                 January 13, 2025 – Welcome new lab member​ <br/>
            &ensp; Welcome, Yunqian (Lyndsey) Zhang, to join the Su Lab as a new graduate student! She earned her M.S. in Biology from Virginia Tech and will be working on macrophage metabolic modulation for tissue regeneration.​</p>
        </div>
