--- a/members.html
+++ b/members.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dr. Su's Lab</title>
+    <title>Biomaterials and Regenerative Medicine Lab</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>Dr. Su's Lab</h1>
+        <h1>Biomaterials and Regenerative Medicine Lab</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
