--- a/news.html
+++ b/news.html
@@ -29,7 +29,7 @@
         </section>
         
         
-        <section class="publications" >
+        <section >
             <p> &nbsp;&nbsp; <b>Su, N.</b>; Saqib, H.; Villicana, C.; Kim, S.; Ambrosi, T. H.; Freeman, P.; Kim, T.; Tong, X.; Ayushman, M.; Chan,
                 C. K. Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of
                 macroporous scaffolds. npj Regenerative Medicine 2025, 10 (1), 1-13.​ <br/>
