--- a/news.html
+++ b/news.html
@@ -94,7 +94,9 @@
     </main>
 
     <footer>
-        <p>Contact</p>
+        <ul>
+             <li><a href="contact.html">Contact</a></li>
+        </ul>
     </footer>
 
     <script src="script.js"></script>
