--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,9 @@
     </main>
 
     <footer>
-        <p>contact</p>    
+        <ul>
+             <li><a href="contact.html">Contact</a></li>
+        </ul>  
     </footer>
 
     <script src="script.js"></script>
