--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+
+         <div class="image-container">
+              <img src="images/Banner image.jpg" alt="Banner" width="auto" height="300px"/>
+            </div>
+
     </header>
 
     <main>
