Update index title change.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
     <main>
         
-           <h2>Biomaterials and Regenerative Medicine Lab</h2>
+           <section class="title-of-page">
+            <div>
+                <h3>Biomaterials and Regenerative Medicine Lab</h3>
+            </div>
         
         <section class="image-text-section">
             <div class="text-container">
