--- a/news.html
+++ b/news.html
@@ -24,10 +24,11 @@
 
     <main>
 
-        <section>
-            <h2>Publications</h2> <br/> <br/>
-        </section>
-        
+        <section class="title-of-page">
+            <div>
+                <h3>Publications</h3>
+            </div>
+        <section/>
         
         <section>
             <p> &emsp;&emsp; <b>Su, N.</b>; Saqib, H.; Villicana, C.; Kim, S.; Ambrosi, T. H.; Freeman, P.; Kim, T.; Tong, X.; Ayushman, M.; Chan,
