--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div>
                 <h3>Biomaterials and Regenerative Medicine Lab</h3>
             </div>
+            <section/>
         
         <section class="image-text-section">
             <div class="text-container">
