--- a/research.html
+++ b/research.html
@@ -23,7 +23,11 @@
     </header>
 
     <main>
-        <h3>Research</h3>
+        <section class="title-of-page">
+            <div>
+                <h3>Research</h3>
+            </div>
+        <section/>
 
         <section class="image-text-section">
             <div class="image-container">
