--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-
-         <div class="image-container">
-              <img src="images/Banner image.jpg" alt="Banner" width="auto" height="300px"/>
-            </div>
-
     </header>
 
     <main>
+
+            <div class="image-container">
+              <img src="images/Banner image.jpg" alt="Banner" width="auto" height="300px"/>
+            </div>
         
            <section class="title-of-page">
             <div>
                 <h3>Biomaterials and Regenerative Medicine Lab</h3>
             </div>
-            <section/>
+           </section>
         
         <section class="image-text-section">
             <div class="text-container">
