--- a/news.html
+++ b/news.html
@@ -28,7 +28,7 @@
             <div>
                 <h3>Publications</h3>
             </div>
-        <section/>
+        </section>
         
         <section>
             <p> &emsp;&emsp; <b>Su, N.</b>; Saqib, H.; Villicana, C.; Kim, S.; Ambrosi, T. H.; Freeman, P.; Kim, T.; Tong, X.; Ayushman, M.; Chan,
