--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
             <div>
                 <h3>Research</h3>
             </div>
-        <section/>
+        </section>
 
         <section class="image-text-section">
             <div class="image-container">
