--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <div>
                 <h3>Contact</h3>
             </div>
-         <section/>
+         </section>
              
         <section class="image-text-section">
             <div class="text-container">
