--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <main>
 
-            <div class="image-container">
-              <img src="images/Banner image.jpg" alt="Banner" width="auto" height="300px"/>
+            <div class="image-container2">
+              <img src="images/Banner image.jpg" alt="Banner" width="auto" height="200px"/>
             </div>
         
            <section class="title-of-page">
