--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
 
             <div class="image-container2">
-              <img src="images/Banner image.jpg" alt="Banner" width="fit-content" height="auto"/>
+              <img src="images/Banner image.jpg" alt="banner" width="fit-content" height="auto"/>
             </div>
         
            <section class="title-of-page">
