--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <main>
 
-            <div class="image-container2">
+<!--             <div class="image-container2">
               <img src="images/Banner image.jpg" alt="banner" width="fit-content" height="auto"/>
-            </div>
+            </div> -->
         
            <section class="title-of-page">
             <div>
