--- a/index.html
+++ b/index.html
@@ -59,26 +59,32 @@
         <section>
              <div class="homesectiontwoandthree">
             <p> July 1, 2025 – New Publication​ <br/>
-            &ensp; Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
+            Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
 <br/> <br/>
                 March 26, 2025 – Summer Fellowship Awarded​ <br/>
-           &ensp; Congratulations to Yunqian (Lyndsey) Zhang for receiving the UK BNRC Summer Research Fellowship to support her collaborative work with Dr. Tong. Her project focuses on a magneto-responsive magnetic nanoparticle-loaded microrod scaffold designed to promote bone regeneration through immunomodulation.​
+           Congratulations to Yunqian (Lyndsey) Zhang for receiving the UK BNRC Summer Research Fellowship to support her collaborative work with Dr. Tong. Her project focuses on a magneto-responsive magnetic nanoparticle-loaded microrod scaffold designed to promote bone regeneration through immunomodulation.​
 <br/> <br/>
                 February 28, 2025 – New Funding Awarded: UK CCTS Pilot Program​ <br/>
-           &ensp; We are excited to share that the Su Lab has received funding from the UK CCTS Pilot Program to support our collaboration with Dr. Simkin from the Microbiology, Immunology, and Molecular Genetics Department. This project, titled Microgel-Based Macrophage Metabolic Reprogramming for Inflammation Control and Tissue Regeneration, aims to develop immunomodulatory platforms that harness macrophage metabolism to promote tissue repair.​
+           We are excited to share that the Su Lab has received funding from the UK CCTS Pilot Program to support our collaboration with Dr. Simkin from the Microbiology, Immunology, and Molecular Genetics Department. This project, titled Microgel-Based Macrophage Metabolic Reprogramming for Inflammation Control and Tissue Regeneration, aims to develop immunomodulatory platforms that harness macrophage metabolism to promote tissue repair.​
 <br/> <br/>
                 May 12, 2025 – Welcome new lab member​ <br/>
-           &ensp; A warm welcome to Bodie, who has joined us through the Summer Undergraduate Research Program! He will be working on harnessing the macrophage secretome to promote tissue regeneration.​
+          A warm welcome to Bodie, who has joined us through the Summer Undergraduate Research Program! He will be working on harnessing the macrophage secretome to promote tissue regeneration.​
 <br/> <br/>
                 March 28, 2025 – Conference Presentation​ <br/>
-            &ensp;Congratulations to Yunqian (Lyndsey) Zhang, who presented her poster at the SFB Biomaterials Day hosted by Vanderbilt University in Nashville, Tennessee.​
+            Congratulations to Yunqian (Lyndsey) Zhang, who presented her poster at the SFB Biomaterials Day hosted by Vanderbilt University in Nashville, Tennessee.​
 <br/> <br/>
                 March 4, 2025 – Faculty Fellowship Awarded​ <br/>
-            &ensp;Congratulations to Dr. Su for being awarded the James F. Lafferty Faculty Fellowship in Biomedical Engineering! This prestigious recognition supports Dr. Su’s innovative research in immunomodulatory biomaterials and her commitment to advancing biomedical engineering education and discovery.​
+            Congratulations to Dr. Su for being awarded the James F. Lafferty Faculty Fellowship in Biomedical Engineering! This prestigious recognition supports Dr. Su’s innovative research in immunomodulatory biomaterials and her commitment to advancing biomedical engineering education and discovery.​
 <br/> <br/>
                 January 13, 2025 – Welcome new lab member​ <br/>
-           &ensp; Welcome, Yunqian (Lyndsey) Zhang, to join the Su Lab as a new graduate student! She earned her M.S. in Biology from Virginia Tech and will be working on macrophage metabolic modulation for tissue regeneration.​</p>
+            Welcome, Yunqian (Lyndsey) Zhang, to join the Su Lab as a new graduate student! She earned her M.S. in Biology from Virginia Tech and will be working on macrophage metabolic modulation for tissue regeneration.​</p>
                  <br/> <br/>
+                 October 17, 2024 – Welcome new lab member​ <br/>
+                Welcome, Hana Horikawa Strakovsky, to join the Su Lab! Hana is a student in the Math, Science, & Technology Center at Paul Laurence Dunbar High School in Lexington, KY—an advanced program designed for students gifted in math and science. She will be working with us over the next two years on research projects related to biomaterials and immune modulation. ​
+<br/><br/>
+August 25, 2024 – Welcome new lab member​<br/>
+Welcome Jay Patel to the Su Lab as a new graduate student! Jay received his B.S. in Biomedical Engineering from The Ohio State University and will be contributing to our research on immunomodulatory biomaterials.​
+                 <br/><br/>
        </div>
         </section>
 <!--         test -->
