--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br/>
         
         <section>
-             <div class="homesectiontwoandthree">
+             <div>
             <p> July 1, 2025 – New Publication​ <br/>
             Check out our recent publication in npj Regenerative Medicine: "Modulating immune-stem cell crosstalk enables robust bone regeneration via tuning compositions of macroporous scaffolds".​
 <br/> <br/>
@@ -78,12 +78,12 @@
 <br/> <br/>
                 January 13, 2025 – Welcome new lab member​ <br/>
             Welcome, Yunqian (Lyndsey) Zhang, to join the Su Lab as a new graduate student! She earned her M.S. in Biology from Virginia Tech and will be working on macrophage metabolic modulation for tissue regeneration.​</p>
-                 <br/> <br/>
+                 <br/> 
                  October 17, 2024 – Welcome new lab member​ <br/>
                 Welcome, Hana Horikawa Strakovsky, to join the Su Lab! Hana is a student in the Math, Science, & Technology Center at Paul Laurence Dunbar High School in Lexington, KY—an advanced program designed for students gifted in math and science. She will be working with us over the next two years on research projects related to biomaterials and immune modulation. ​
 <br/><br/>
-August 25, 2024 – Welcome new lab member​<br/>
-Welcome Jay Patel to the Su Lab as a new graduate student! Jay received his B.S. in Biomedical Engineering from The Ohio State University and will be contributing to our research on immunomodulatory biomaterials.​
+            August 25, 2024 – Welcome new lab member​<br/>
+            Welcome Jay Patel to the Su Lab as a new graduate student! Jay received his B.S. in Biomedical Engineering from The Ohio State University and will be contributing to our research on immunomodulatory biomaterials.​
                  <br/><br/>
        </div>
         </section>
