--- a/research.html
+++ b/research.html
@@ -48,7 +48,8 @@
                 (2) We develop humanized in
             vitro disease models for mechanistic discovery of
             immune crosstalk and high-throughput drug
-            screening. By integrating principles of immunology,
+            screening. <br/>
+                By integrating principles of immunology,
             materials science, and stem cell biology, we aim to
             uncover the underlying mechanisms of immune
             dysfunction and leverage this knowledge to
