--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <h1>Biomaterials and Regenerative Medicine Lab -- Biomedical Engineering Department at UK</h1>
+        <h1>Biomaterials and Regenerative Medicine Lab</h1>
+        <h1> Biomedical Engineering Department at UK</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
