--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Biomaterials and Regenerative Medicine Lab</h1>
-        <h1> Biomedical Engineering Department at UK</h1>
+        <h1> Biomedical Engineering Department at University of Kentucky</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
