--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Biomaterials and Regenerative Medicine Lab</h1>
+        <h1 class = "topheader">Biomaterials and Regenerative Medicine Lab</h1>
         <h1> Biomedical Engineering Department at University of Kentucky</h1>
             <nav>
                 <ul>
