--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <h1 class = "topheader">Biomaterials and Regenerative Medicine Lab</h1>
-        <h1> Biomedical Engineering Department at University of Kentucky</h1>
+        <h1>Biomaterials and Regenerative Medicine Lab <br/>
+            Biomedical Engineering Department at University of Kentucky</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
