--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
 <!--         <section class="leftindex"> -->
             <div class="image-container">
-              <img src="images/lab_recruitment.png" alt="Recruitment" width="600px" height="auto"/>
+              <img src="images/Hiring post.png" alt="Recruitment" width="600px" height="auto"/>
             </div>
 <!--         </section> -->
         </section>
