--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
            </section>
         
         <section class="image-text-section">
-            <div class="text-container">
-            <p>At the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
-                therapies for various diseases. Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
+            <div class="text-container2">
+            <p>In the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
+                therapies for various diseases. <br/> <br/>
+                Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
                 function. Our research focuses on engineering biomaterials that can modulate immune responses to promote healing and restore 
-                tissue function. We employ cutting-edge biomaterial platforms to construct complex, humanized in vitro disease models for 
-                mechanistic discovery and high-throughput drug screening. In parallel, we design biomaterial-based delivery systems and tissue 
-                scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. By integrating principles of immunology,  
+                tissue function. <br/> <br/> 
+                We employ cutting-edge biomaterial platforms to construct complex, humanized in vitro disease models for 
+                mechanistic discovery and high-throughput drug screening. <br/> <br/>
+                In parallel, we design biomaterial-based delivery systems and tissue 
+                scaffolds to directly modulate immune activity and promote tissue regeneration in vivo. <br/> <br/>
+                By integrating principles of immunology,  
                 materials science, and stem cell biology, we aim to uncover the underlying mechanisms of immune dysfunction and leverage this 
                 knowledge to develop next-generation immunotherapies.​</p>
             </div>
