--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            </section>
         
         <section class="image-text-section">
-            <div class="text-container2">
+            <div class="text-container-intro">
             <p>In the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
                 therapies for various diseases. <br/> <br/>
                 Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
