--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         
         <section class="image-text-section">
             <div class="text-container-intro">
+             <h2>Biomaterials and Regenerative Medicine Lab</h2>
+                
             <p>In the Biomaterials and Regenerative Medicine Lab, we harness the power of the immune system and biomaterials to advance 
                 therapies for various diseases. <br/> <br/>
                 Nearly every known pathology—from tissue injury and cancer to aging—is influenced by immune 
