Update email format in contact.html

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
               Phone: (859)257-1064​ <br />
 
-              Email: <a href="https://outlook.office.com/mail/inbox/id/AAQkAGZkZjMzM2Y5LWJjNTYtNDNmOS1iZjcwLTFmNmUwNDc1NDliNgAQAHniTwX79RdIi%2FlmiP8Kskc%3D#:~:text=Ni.Su%40uky.-,edu,-Chat">Ni.Su@uky.edu</a>
+              Email: <ul><li><a href="https://outlook.office.com/mail/inbox/id/AAQkAGZkZjMzM2Y5LWJjNTYtNDNmOS1iZjcwLTFmNmUwNDc1NDliNgAQAHniTwX79RdIi%2FlmiP8Kskc%3D#:~:text=Ni.Su%40uky.-,edu,-Chat">Ni.Su@uky.edu</a></li></ul>
               </p>
             </div>
 <!--         <section class="leftindex"> -->
